--- a/assistance.html
+++ b/assistance.html
@@ -38,7 +38,7 @@
       <label for="message">What type of assistance do you need?:</label>
       <textarea id="message" name="message" required></textarea>
 
-    <input type="submit" value="Submit" aria-label="Submit Assistance Request">
+      <input type="submit" value="Submit">
     </form>
   </section>
 </main>
