--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet"  href="styles.css">
-    // Removed redundant 'viewport' meta element
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -49,10 +49,9 @@
       <input type="text" id="email" name="email" placeholder="Your email.." required>
 
       <label for="message">Message:</label>
-    <label for="message">Message:</label>
-    <textarea id="message" name="message" placeholder="Write something.." required></textarea>
+      <textarea id="message" name="message" placeholder="Write something.." style="height:200px" required></textarea>
 
-    <input type="submit" value="Submit" aria-label="Submit the form">
+      <input type="submit" value="Submit">
     </form>
 
 
