--- a/donate.html
+++ b/donate.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    // Removed redundant viewport meta element
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -46,9 +46,9 @@
 
             <input type="radio" id="amount-custom" name="amount" value="custom">
             <label for="amount-custom">Custom Amount:</label>
-            <label for="custom-amount">Custom Amount:</label>
-            <input type="number" id="custom-amount" name="custom-amount" aria-label="Custom Amount">
-            <input type="submit" value="Donate" aria-label="Donate">
+            <input type="number" id="custom-amount" name="custom-amount">
+
+            <input type="submit" value="Donate">
         </form>
     </section>
 
@@ -67,7 +67,7 @@
             <label for="cvv">CVV:</label>
             <input type="text" id="cvv" name="cvv" required>
 
-            <input type="submit" value="Submit Payment" aria-label="Submit Payment">
+            <input type="submit" value="Submit Payment">
         </form>
     </section>
 </main>
