--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap" rel="stylesheet">
- <link rel="stylesheet" type="text/css" href="../css/styles.css">
+ <link rel="stylesheet" type="text/css" href="styles.css">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -22,7 +22,7 @@
 <nav class="navbar">
   <ul class="navlist">
      <li class="list-items">
-     <a href="index.html">Hom</a>
+     <a href="index.html">Home</a>
      <a href="alerts.html">Alerts</a>
      <a href="assistance.html">Assistance</a>
      <a href="volunteer.html">Volunteer</a>
