Fix Padding and Alignment
AutoLinitng, changes to {doante,syles,asisitance,voulunteer}

--- a/volunteer.html
+++ b/volunteer.html
@@ -27,7 +27,7 @@
 
 <main>
   <section>
-    <h2>Volunteer Form</h2>
+    <h2 class="head-sub">Volunteer Form</h2>
     <form action="#" method="post">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
