--- a/assistance.html
+++ b/assistance.html
@@ -27,7 +27,7 @@
 
 <main>
   <section>
-    <h2>Request Assistance</h2>
+    <h2 class="head-sub">Request Assistance</h2>
     <form action="#" method="post">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
