--- a/donate.html
+++ b/donate.html
@@ -33,7 +33,7 @@
 
 <main>
     <section>
-        <h2>Choose your donation amount:</h2>
+        <h2 class="head-sub">Choose your donation amount:</h2>
         <form action="#" method="post">
             <input type="radio" id="amount-10" name="amount" value="10">
             <label for="amount-10">$10</label>
@@ -53,7 +53,7 @@
     </section>
 
     <section>
-        <h2>Payment Information:</h2>
+        <h2 class="head-sub">Payment Information:</h2>
         <form action="#" method="post">
             <label for="card-name">Cardholder Name:</label>
             <input type="text" id="card-name" name="card-name" required>
