Bug Fixes, optimisation
Fixed issues, aligned navbar

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   <ul class="navlist">
      <li class="list-items">
      <a href="index.html">Home</a>
-     <a href="alerts.html">Alerts</a>
-     <a href="assistance.html">Assistance</a>
-     <a href="volunteer.html">Volunteer</a>
-     <a href="donate.html">Donate</a>
-     <a href="contact.html">Contact</a></li>
+     <a href="pages/alerts.html">Alerts</a>
+     <a href="pages/assistance.html">Assistance</a>
+     <a href="pages/volunteer.html">Volunteer</a>
+     <a href="pages/donate.html">Donate</a>
+     <a href="pages/contact.html">Contact</a></li>
    </ul>
 </nav>
 </nav>
@@ -56,14 +56,12 @@
 <br>
 
 
-<div class="Footer">
+<footer>
 <p2>Privacy Policy</p2>
-<br>
 <p2>Terms of Use</p2><br>
 <p2>Accessibility Statement Goes Here.</p2>
-<br>
 <p2>&copy; R!SE ABOVE 2020</p2>
-</div>
+</footer>
 </main>
 </body>
 </html>
