--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <head>
   <title>Contact Page</title>
 
@@ -9,11 +8,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>R!SE ABOVE</title>
-	<link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet"  href="styles.css">
+    <link rel="stylesheet"  href="../styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -27,11 +25,11 @@
 <nav class="navbar">
   <ul class="navlist">
      <li class="list-items">
-     <a href="index.html">Home</a>
-     <a href="alerts.html">Alerts</a>
-     <a href="assistance.html">Assistance</a>
-     <a href="volunteer.html">Volunteer</a>
-     <a href="donate.html">Donate</a>
+     <a href="../index.html">Home</a>
+     <a href="./alerts.html">Alerts</a>
+     <a href="./assistance.html">Assistance</a>
+     <a href="./volunteer.html">Volunteer</a>
+     <a href="./donate.html">Donate</a>
      <a href="contact.html">Contact</a></li>
    </ul>
 </nav>
@@ -39,8 +37,8 @@
 
 <main>
 <body>
-  <div class="container">
-    <h2>Contact Us</h2>
+  <section class="contact">
+    <h2 class="head-sub">Contact Us</h2>
     <form action="#" method="post">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" placeholder="Your name.." required>
@@ -53,19 +51,15 @@
 
       <input type="submit" value="Submit">
     </form>
-
-
-  </div>
+  </section>
+  <footer class="Footer">
+    <p>Privacy Policy</p>
+    <p>Terms of Use</p>
+    <p>Accessibility Statement Goes Here.</p>
+    <p>&copy; R!SE ABOVE 2023</p>
+  </footer>
 </body>
-</html>
-
-<footer class="Footer">
-  <p>Privacy Policy</p>
-  <p>Terms of Use</p>
-  <p>Accessibility Statement Goes Here.</p>
-  <p>&copy; R!SE ABOVE 2023</p>
-</footer>
-
 </main>
+
 </body>
 </html>
