--- a/pages/alerts.html
+++ b/pages/alerts.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>R!SE ABOVE - Alert</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 
@@ -15,12 +15,12 @@
 <nav class="navbar">
   <ul class="navlist">
     <li class="list-items">
-      <a href="index.html">Home</a>
+      <a href="../index.html">Home</a>
       <a href="alerts.html">Alerts</a>
-      <a href="assistance.html">Assistance</a>
-      <a href="volunteer.html">Volunteer</a>
-      <a href="donate.html">Donate</a>
-      <a href="contact.html">Contact</a>
+      <a href="./assistance.html">Assistance</a>
+      <a href="./volunteer.html">Volunteer</a>
+      <a href="./donate.html">Donate</a>
+      <a href="./contact.html">Contact</a>
     </li>
   </ul>
 </nav>
