--- a/pages/donate.html
+++ b/pages/donate.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>R!SE ABOVE</title>
-	<link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -21,12 +20,12 @@
 <nav class="navbar">
     <ul class="navlist">
         <li class="list-items">
-            <a href="index.html">Home</a>
-            <a href="alerts.html">Alerts</a>
-            <a href="assistance.html">Assistance</a>
-            <a href="volunteer.html">Volunteer</a>
+            <a href="../index.html">Home</a>
+            <a href="./alerts.html">Alerts</a>
+            <a href="./assistance.html">Assistance</a>
+            <a href="./volunteer.html">Volunteer</a>
             <a href="donate.html">Donate</a>
-            <a href="contact.html">Contact</a>
+            <a href="./contact.html">Contact</a>
         </li>
     </ul>
 </nav>
@@ -50,10 +49,8 @@
 
             <input type="submit" value="Donate">
         </form>
-    </section>
 
-    <section>
-        <h2 class="head-sub">Payment Information:</h2>
+        <h2 class="head-sub padding-extra-toppages/">Payment Information:</h2>
         <form action="#" method="post">
             <label for="card-name">Cardholder Name:</label>
             <input type="text" id="card-name" name="card-name" required>
@@ -69,6 +66,10 @@
 
             <input type="submit" value="Submit Payment">
         </form>
+    </section>
+
+    <section>
+       
     </section>
 </main>
 
