--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>R!SE ABOVE - Volunteer</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 
@@ -15,18 +15,18 @@
 <nav class="navbar">
   <ul class="navlist">
     <li class="list-items">
-      <a href="index.html">Home</a>
-      <a href="alerts.html">Alerts</a>
-      <a href="assistance.html">Assistance</a>
+      <a href="../index.html">Home</a>
+      <a href="./alerts.html">Alerts</a>
+      <a href="./assistance.html">Assistance</a>
       <a href="volunteer.html">Volunteer</a>
-      <a href="donate.html">Donate</a>
-      <a href="contact.html">Contact</a>
+      <a href="./donate.html">Donate</a>
+      <a href="./contact.html">Contact</a>
     </li>
   </ul>
 </nav>
 
 <main>
-  <section>
+  <section class="volunteer">
     <h2 class="head-sub">Volunteer Form</h2>
     <form action="#" method="post">
       <label for="name">Name:</label>
