--- a/pages/assistance.html
+++ b/pages/assistance.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>R!SE ABOVE - Assistance</title>
+  <title>RISE ABOVE - Assistance</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 
 <header>
-  <h1 id="header_h1">R!SE ABOVE</h1>
+  <h1 id="header_h1">RISE ABOVE</h1>
 </header>
 
 <nav class="navbar">
@@ -46,8 +46,8 @@
 <footer class="Footer">
   <p>Privacy Policy</p>
   <p>Terms of Use</p>
-  <p>Accessibility Statement Goes Here.</p>
-  <p>&copy; R!SE ABOVE 2023</p>
+  <p>Accessibility Statement</p>
+  <p>&copy; RISE ABOVE 2023</p>
 </footer>
 </body>
 </html>
