--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R!SE ABOVE</title>
+    <title>RISE ABOVE</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
 <body>
 
 <header>
-<h1 id="header_h1">R!SE ABOVE</h1>
+<h1 id="header_h1">RISE ABOVE</h1>
   </header>
 
 <nav>
@@ -56,7 +56,7 @@
     <p>Privacy Policy</p>
     <p>Terms of Use</p>
     <p>Accessibility Statement Goes Here.</p>
-    <p>&copy; R!SE ABOVE 2023</p>
+    <p>&copy; RISE ABOVE 2023</p>
   </footer>
 </body>
 </main>
