--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R!SE ABOVE</title>
+    <title>RISE ABOVE</title>
 	<link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,8 +59,8 @@
 <footer>
 <p2>Privacy Policy</p2>
 <p2>Terms of Use</p2><br>
-<p2>Accessibility Statement Goes Here.</p2>
-<p2>&copy; R!SE ABOVE 2020</p2>
+<p2>Accessibility Statement</p2>
+<p2>&copy; RISE ABOVE 2023</p2>
 </footer>
 </main>
 </body>
