--- a/pages/contact.html
+++ b/pages/contact.html
@@ -55,7 +55,7 @@
   <footer class="Footer">
     <p>Privacy Policy</p>
     <p>Terms of Use</p>
-    <p>Accessibility Statement Goes Here.</p>
+    <p>Accessibility Statement</p>
     <p>&copy; RISE ABOVE 2023</p>
   </footer>
 </body>
